--- a/index.html
+++ b/index.html
@@ -96,7 +96,21 @@
           ></div>
         </div>
 
-        <div id="download" class="download"><h5>Download PDF</h5></div>
+        <div class="upperConfButtons">
+          <div id="bringForward" class="conf-button" style="visibility: hidden">
+            <h5>Bring Forward</h5>
+          </div>
+
+          <div
+            id="sendBackwards"
+            class="conf-button"
+            style="visibility: hidden"
+          >
+            <h5>Send Backwards</h5>
+          </div>
+
+          <div id="download" class="conf-button"><h5>Download PDF</h5></div>
+        </div>
 
         <div class="colorPicker" id="picker"></div>
 
@@ -153,7 +167,7 @@
                 background-image: url('img/addCircle.svg');
                 background-size: cover;
                 cursor: pointer;
-                margin-left: 10px;
+                /* margin-left: 10px; */
               "
             ></div>
           </div>
