--- a/index.html
+++ b/index.html
@@ -130,6 +130,9 @@
         <div class="conf-button" id="screenshotBut">
           <h5>Screenshot Mask</h5>
         </div>
+        <div class="conf-button" id="downLoadModel">
+          <h5>Download Model</h5>
+        </div>
         <div class="conf-button" id="addFaceBut">
           <h5 id="addFaceButTitle">Add Face</h5>
         </div>
