--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
           <h5>Screenshot Mask</h5>
         </div>
         <div class="conf-button" id="downLoadModel">
-          <h5>Download Model</h5>
+          <h5>Download 3D Model</h5>
         </div>
         <div class="conf-button" id="addFaceBut">
           <h5 id="addFaceButTitle">Add Face</h5>
